[package]
name = "armature-distributed"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Distributed systems primitives for Armature"
keywords = ["distributed", "locks", "consensus", "cluster"]
categories = ["web-programming", "concurrency"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
# Redis for distributed locks/leader election - uses armature-redis for DI integration
armature-redis = { path = "../armature-redis", version = "0.1.0" }
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
thiserror = "2.0"
tracing = "0.1"
rand = "0.9"

[dev-dependencies]
tokio-test = "0.4"

