[package]
name = "armature-features"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Feature flags, A/B testing, and gradual rollout for Armature"
keywords = ["features", "flags", "toggles", "ab-testing"]
categories = ["web-programming", "config"]

[dependencies]
armature-core = { path = "../armature-core", version = "0.2.1" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.35", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
rand = "0.9"

# LaunchDarkly integration (optional)
launchdarkly-server-sdk = { version = "2.0", optional = true }
futures = { version = "0.3", optional = true }

[features]
default = []
launchdarkly = ["dep:launchdarkly-server-sdk", "dep:futures"]

[dev-dependencies]
tokio-test = "0.4"

