[package]
name = "armature-files"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "File processing pipeline for Armature framework - images, PDFs, and format conversion"
keywords = ["image", "pdf", "file-processing", "media", "conversion"]
categories = ["multimedia::images", "web-programming"]

[dependencies]
armature-core = { path = "../armature-core", version = "0.2.1" }
armature-log = { path = "../armature-log", version = "0.1.0" }
tokio = { version = "1.35", features = ["rt-multi-thread", "fs", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0"
bytes = "1.5"
mime = "0.3"
mime_guess = "2.0"

# Image processing
image = { version = "0.25", optional = true }
imageproc = { version = "0.25", optional = true }

# PDF generation
printpdf = { version = "0.8", optional = true }
lopdf = { version = "0.36", optional = true }

# Additional formats
zip = { version = "2.2", optional = true }
base64 = { version = "0.22", optional = true }
sha2 = { version = "0.10", optional = true }

[features]
default = ["images"]
images = ["image", "imageproc"]
pdf = ["printpdf", "lopdf"]
archives = ["zip"]
full = ["images", "pdf", "archives", "base64", "sha2"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.20"

