[package]
name = "armature-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

# Armature crates to fuzz
armature-core = { path = "../armature-core", version = "0.2.1" }

# Common dependencies for fuzzing
bytes = "1"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_http_request"
path = "fuzz_targets/http_request.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_http_response"
path = "fuzz_targets/http_response.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_routing"
path = "fuzz_targets/routing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_json"
path = "fuzz_targets/json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_url_parsing"
path = "fuzz_targets/url_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_headers"
path = "fuzz_targets/headers.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_query_params"
path = "fuzz_targets/query_params.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_path_params"
path = "fuzz_targets/path_params.rs"
test = false
doc = false
bench = false

