[package]
name = "armature-graphql-client"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "GraphQL client with subscription support for Armature"
keywords = ["graphql", "client", "federation", "subscription", "armature"]
categories = ["web-programming", "asynchronous"]

[dependencies]
# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }

# WebSocket for subscriptions
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# GraphQL
graphql_client = "0.15"

# Error handling
thiserror = "2.0"

# Tracing
tracing = "0.1"

# Utilities
async-trait = "0.1"
url = "2.5"
http = "1.1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
tokio-test = "0.4"

