[package]
name = "armature-graphql"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "GraphQL server integration for Armature"
keywords = ["graphql", "api", "async-graphql", "server"]
categories = ["web-programming", "api-bindings"]

[dependencies]
armature-core = { path = "../armature-core", version = "0.2.1" }
armature-log = { path = "../armature-log", version = "0.1.0" }
async-graphql = { version = "7.0.7", features = ["apollo_tracing"] }
async-graphql-axum = "7.0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json"], optional = true }
futures = { version = "0.3", optional = true }

[features]
default = []
# Apollo Federation v2 support for microservices
federation = ["reqwest", "futures"]

[dev-dependencies]
tokio-test = "0.4"

