[package]
name = "armature-http-client"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HTTP client with retry, circuit breaker, and timeout support for Armature"
keywords = ["http", "client", "retry", "circuit-breaker", "armature"]
categories = ["web-programming::http-client", "asynchronous"]

[dependencies]
# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "stream"] }

# Async runtime
tokio = { version = "1.35", features = ["time", "sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Tracing
tracing = "0.1"

# Utilities
url = "2.5"
http = "1.1"
bytes = "1.5"
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
base64 = "0.22"
serde_urlencoded = "0.7"

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
tokio-test = "0.4"
wiremock = "0.6"

