[package]
name = "armature-i18n"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internationalization (i18n) support for Armature framework"
keywords = ["i18n", "internationalization", "localization", "translation", "armature"]
categories = ["internationalization", "web-programming"]

[features]
default = ["fluent"]
# Use Fluent for message formatting
fluent = ["dep:fluent", "dep:fluent-bundle", "dep:fluent-syntax", "dep:intl-memoizer", "dep:unic-langid"]
# ICU-based formatting
icu = ["dep:icu_locid", "dep:icu_datetime", "dep:icu_decimal", "dep:icu_plurals", "dep:icu_calendar"]
# Full features
full = ["fluent", "icu"]

[dependencies]
# Core
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
parking_lot = "0.12"

# Fluent (Mozilla's i18n system)
fluent = { version = "0.17", optional = true }
fluent-bundle = { version = "0.15", optional = true }
fluent-syntax = { version = "0.12", optional = true }
intl-memoizer = { version = "0.5", optional = true }
unic-langid = { version = "0.9", optional = true }

# ICU (International Components for Unicode)
icu_locid = { version = "2.0", optional = true }
icu_datetime = { version = "1.5", optional = true }
icu_decimal = { version = "1.5", optional = true }
icu_plurals = { version = "2.2", optional = true }
icu_calendar = { version = "1.5", optional = true }

# Internal
armature-core = { path = "../armature-core", version = "0.2.1", optional = true }
armature-log = { path = "../armature-log", version = "0.1.0" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

